# eravpn-client

./: .gitignore  CMakeLists.txt  LICENSE  README.md
install/win/: install.iss  install.nsi
res/: app.exe.manifest  app.qrc  app.rc  eravpn.qmlproject  flags.qrc  main.qml
res/components/: BackgroundMap.qml  EraBackgroundMap.qml  EraButton.qml  EraLink.qml  EraLogo.qml  EraTextField.qml  Logo.qml  MainSideBar.qml  Notification.qml  NotificationArea.qml  WindowTitleBar.qml
res/components/certificateselection/: CertificateGenerationPopup.qml  CertificateListView.qml  CertificateSelectionPopup.qml
res/components/era/: EraBackButton.qml  EraButton.qml  EraLabel.qml  EraLink.qml  EraPasswordField.qml  EraSwitch.qml  EraTextField.qml
res/components/mainview/: ConnectionInfo.qml  PowerButton.qml
res/components/profileview/: ReferralClientListView.qml
res/components/settings/: Group.qml  Separator.qml  SettingsGroup.qml
res/components/sidebar/: ConnectionInfo.qml  PremiumActivation.qml  ServerActivationButton.qml  ServerListView.qml
res/components/tariffselection/: TariffComponent.qml
res/components/titlebar/: TitleBarButton.qml
res/models/: ServerListModel.qml
res/translations/: main_en.qm  main_en.ts  main_ru.qm  main_ru.ts
res/views/: AuthKeyView.qml  LoginView.qml  MainView.qml  ProfileView.qml  RegistrationView.qml  RememberedSignInView.qml  SettingsView.qml  TariffSelectionView.qml  main.qml
src/: CMakeLists.txt  main.cpp
src/Core/: AuthController.cpp  AuthController.hpp  BackEnd.cpp  BackEnd.hpp  Connection.cpp  Connection.hpp
src/Core/Controllers/: AuthController.cpp  AuthController.hpp  ClipboardController.hpp  CountriesController.cpp  CountriesController.hpp  LocationController.cpp  LocationController.hpp  ProfileController.cpp  ProfileController.hpp  VpnController.cpp  VpnController.hpp
src/Core/Models/: CertificateListModel.cpp  CertificateListModel.hpp  Country.cpp  Country.hpp  CountryListModel.cpp  CountryListModel.hpp  Location.cpp  Location.hpp  Profile.cpp  Profile.hpp  VpnConnection.cpp  VpnConnection.hpp
src/Stuff/: Settings.cpp  Settings.hpp
src/Vpn/: Client.cpp  Client.hpp  ClientBase.cpp  Event.cpp  Event.hpp  Vpn.cpp  Vpn.hpp
src/app/: BackEnd.cpp  BackEnd.hpp  CMakeLists.txt  Connection.cpp  Connection.hpp  MocTargets.hpp  main.cpp
src/app/Controllers/: ApplicationController.cpp  ApplicationController.hpp  CertificateController.cpp  CertificateController.hpp  ClipboardController.cpp  CountriesController.cpp  LocationController.cpp  LocationController.hpp  ProfileController.cpp  ProfileController.hpp  ReferralClientsController.cpp  ReferralClientsController.hpp  SystemTrayController.cpp  SystemTrayController.hpp  TariffController.cpp  TariffController.hpp  TranslationController.cpp  TranslationController.hpp  VpnController.cpp  VpnController.hpp
src/app/Models/: ApplicationSettings.cpp  ApplicationSettings.hpp  Certificate.cpp  Certificate.hpp  CertificateListModel.cpp  CertificateListModel.hpp  Country.hpp  CountryListModel.cpp  CountryListModel.hpp  Profile.cpp  Profile.hpp  ReferralClient.cpp  ReferralClient.hpp  ReferralClientListModel.cpp  ReferralClientListModel.hpp  Tariff.cpp  Tariff.hpp  TariffListModel.cpp  TariffListModel.hpp  TariffPlan.cpp  TariffPlan.hpp  Translation.cpp  Translation.hpp  VpnConnection.cpp  VpnConnection.hpp
src/app/Stuff/: Helpers.hpp  Logger.cpp  Logger.hpp  Query.cpp  Query.hpp  QueryBuilder.cpp  QueryBuilder.hpp  RunGuard.cpp  RunGuard.hpp  Settings.cpp  Settings.hpp  StringHelpers.cpp  StringHelpers.hpp
src/vpn/: CMakeLists.txt  Client.cpp  ClientBase.hpp
